public/css/main.css
/* ... */
.tags-input__popular-tag:not(:last-child) {
  margin-right: 20px;
}
.tags-input__popular-tag span {
  display: inline-block;
}

/* switch */
.switch {
  display: inline-block;
}
.switch__trace {
  background: rgba(255, 255, 255, 0.03);;
  border-radius: 12px;
  width: 48px;
  height: 24px;
  padding: 4px;
  cursor: pointer;
  transition: all .35s;
}
.switch__trace_selected {
  background: #DA71FF;
}
.switch__switcher {
  background: #b4b4b4;
  width: 16px;
  height: 16px;
  border-radius: 55%;
  transition: all .35s;
}
.switch__switcher_selected {
  background: #fff;
  margin-left: 24px;
}

/* FILE LOADER */
.upload {
  border: 1px dashed #696969;
  box-sizing: border-box;
  border-radius: 12px;
}

.upload_loaded {
  border: none;
}
.upload__block {
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 34px 10px 40px 10px;
  cursor: pointer;
}
.upload__block:hover .upload__headline {
  color: #DA71FF;
}
.upload__block:hover .upload__img path {
  fill: #DA71FF;
}
.upload__headline {
  color: #696969;
  font-size: 20px;
  font-weight: 600;
  letter-spacing: -0.022em;
  margin: 11px 0 8px 0;
  transition: all .35s;
}
.upload__img {
  width: 35px;
}
.upload__img path {
  width: 35px;
  fill: #696969;
  transition: all .35s;
}
.upload__subtext {
  font-weight: 500;
  font-size: 12px;
  line-height: 15px;
  text-align: center;
  letter-spacing: -0.014em;
  color: #696969;
}
.upload__loaded-block {
  text-align: center;
}
.upload__loaded-img {
  width: 100%;
}

/* TRANSITIONS */

.fade-enter-active, .fade-leave-active {
  transition: opacity .35s;
}
.fade-enter, .fade-leave-to /* .fade-leave-active до версии 2.1.8 */ {
  opacity: 0;
}

/* loader */

.preloader {
  background: url(../assets/images/loader.gif) no-repeat center center;
  background-size: 70px;
  width: 40px;
  height: 40px;
  margin: 0 auto;
}
.preloader_inline {
  display: inline-block;
  vertical-align: middle;
}

/* loader */

.loader {
  display: block;
  position: relative;
  width: 25px;
  margin: 0 auto;
  height: 25px;
}
.loader div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  width: 20px;
  height: 20px;
  margin: 8px;
  border: 3px solid #fff;
  border-radius: 50%;
  animation: loader-anim 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
  border-color: #fff transparent transparent transparent;
}
.loader div:nth-child(1) {
  animation-delay: -0.45s;
}
.loader div:nth-child(2) {
  animation-delay: -0.3s;
}
.loader div:nth-child(3) {
  animation-delay: -0.15s;
}
@keyframes loader-anim {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

/* search-field */
.search {
  position: relative;
}
.search__tips-loading {
  background-image: url(../assets/images/loader.gif);
  background-image: url(../assets/images/loader.gif);
  width: 25px;
  height: 25px;
  background-size: 25px;
  position: absolute;
  top: calc(50% - 12.5px);
  right: 45px;
}
.search__close {
  background: url('../assets/images/i-close_gray.svg') no-repeat center;
  width: 15px;
  height: 15px;
  position: absolute;
  top: calc(50% - 7.5px);
  right: 27px;
}
#main-searh {
  background-color: #121212;
  background-image: url('../assets/images/i-search.svg');
  background-repeat: no-repeat;
  padding: 12px 55px 12px 48px;
  border-radius: 20px;
  background-position: 18px center;
  color: #fff;
  width: 100%;
  font-weight: 500;
  font-size: 16px;
  line-height: 19px;
  letter-spacing: -0.011em;
  transition: all .35s;
}
#main-searh::placeholder {
  color: rgba(255, 255, 255, 0.7);
  font-size: 14px;
  font-family: Inter;
  line-height: 17px;
}
.search_opened {
  border-radius: 20px 20px 0 0 !important;
}
.search__tips {
  position: absolute;
  padding: 5px 21px 15px 21px;
  border-radius: 0 0 20px 20px;
  left: 0;
  right: 0;
  background-color: #121212;
  display: flex;
  flex-direction: column;
  gap: 10px;
  cursor: default;
}
.search__tips_wide {
  margin: 0 15px;
}
.search__tip {
  height: 44px;
  background: transparent;
  border-radius: 8px;
  display: flex;
  align-items: center;
  padding: 0 24px;
  transition: all .35s;
}
.search__tip:hover {
  background: rgba(255, 255, 255, 0.05);
}
.search__tag {
  padding: 2px 8px;
  background: rgba(255, 255, 255, 0.15);
  border-radius: 6px;
  transition: all .35s;
}
.search__tip:hover .search__tag {
  background: #DA71FF;
  color: #000;
}
/* .search__result-text {
  cursor: pointer;
  font-weight: 500;
  font-size: 14px;
  line-height: 17px;
  color: rgba(255, 255, 255, 0.7);
} */


/* MOBILE MENU */

.mobile-menu {
  position: fixed;
  width: 300px;
  height: 100vh;
  overflow-y: scroll;
  /* max-height: 667px; */
  top: 0;
  left: -300px;
  padding: 0 32px;
  background: rgba(18, 18, 18, .75);
  /* background: coral; */
  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(100px);
  z-index: 5;
  transition: left .35s;
}
.mobile-menu_opened {
  left: 0;
}
.mobile-menu::-webkit-scrollbar {
  width: 0;
}
.mobile-menu__close {
  background: url(../assets/images/i-mobile-menu-close.svg) no-repeat center;
  width: 16px;
  height: 16px;
  position: absolute;
  right: 24px;
  top: 24px;
}
/* authorized */
.mobile-menu__authorized {
  padding: 48px 0 32px 0;
  display: flex;
  flex-direction: column;
  min-height: 100%;
}
.mobile-menu__user {
  display: flex;
  align-items: center;
  gap: 0 24px;
  margin-bottom: 24px;
  flex-shrink: 0;
}
.mobile-menu__avatar img {
  width: 64px;
  height: 64px;
  border-radius: 55%;
}
.mobile-menu__nickname {
  font-weight: 600;
  font-size: 18px;
  line-height: 22px;
  letter-spacing: -0.014em;
  color: rgba(255, 255, 255, 0.7);
}
.mobile-menu__menu-items_auth {
  margin-bottom: 64px;
}
.mobile-menu__auth-menu {
  display: flex;
  flex-grow: 1;
  flex-shrink: 0;
  gap: 16px 0;
  flex-direction: column;
  justify-content: flex-end;
}
/* ... */

